--- a/50.adoc
+++ b/50.adoc
@@ -1,6 +1,8 @@
 = Architects focus is on the boundaries and interfaces
 :author: Einar Landre
 
+By: {author}
+
 Since Lord Nelson destroyed the French and Spanish fleet at Trafalgar in 1805, "divide an conquer" has been the mantra for dealing with complex and difficult problems.
 A more familiar term with the same intent is separation of concern.
  From separation of concern we get encapsulation, and from encapsulation we get boundaries and interfaces.
